[package]
name = "cln-rpc"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "An async RPC client for Core Lightning."

[[example]]
name = "cln-rpc-getinfo"
path = "examples/getinfo.rs"

[dependencies]
anyhow = "1.0"
bitcoin = { version = "0.29", features = [ "serde" ] }
bytes = "1"
futures-util = { version = "0.3", features = [ "sink" ] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["net"]}
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.37"

[dev-dependencies]
env_logger = "0.10"
tokio = { version = "1", features = ["net", "macros", "rt-multi-thread"]}
